TP5 - Correcciones en los titulos, agregado de imagenes de los bancos de medición(No se bien como es el tema de que queden bien las imagenes) y explicaciones de los procedimientos realizados.

--- a/TP5/Informe/66.02 - TP5.Grupo.1.tex
+++ b/TP5/Informe/66.02 - TP5.Grupo.1.tex
@@ -122,7 +122,7 @@
 	· Relación de frecuencias
 	
 	
-	Como se mide la frecuencia:
+\subsection{Medicion de Frecuencia}
 	
 		\begin{figure}[h]
 			\centering
@@ -142,7 +142,7 @@
 	\end{figure}
 	\bigskip\bigskip
 	
-	Como se mide el Período:
+\subsection {Medicion de Período}
 		
 	\begin{figure}[h]
 		\centering
@@ -164,10 +164,10 @@
 	\bigskip\bigskip
 	
 	
-	Como se mide el intervalo de tiempo:
+\subsection{Medición del Intervalo de tiempo}
 	
 	A diferencia de las mediciones anteriores, en este caso el objetivo de esta medición es medir el tiempo que transcurre entre dos eventos que pueden provenir de señales diferentes o de la misma señal.
-	
+	\medskip
 	El diagrama en bloques del instrumento para poder realizar esta medición es:
 	
 	\begin{figure}[h]
@@ -177,8 +177,8 @@
 	\end{figure}
 	\bigskip\bigskip
 	
-	Como se mide la Relación de Frecuencias:
-	
+\subsection{Medición de la Relación de Frecuencias} 
+	\medskip
 	Esta última configuración permite comparar señales de frecuencias distintas, mostrando cuántos ciclos de una señal de alta frecuencia entran en un ciclo de la otra de frecuencia menor.
 	\medskip
 	El diagrama en bloques del instrumento para poder realizar esta medición es:
@@ -191,7 +191,7 @@
 	\bigskip\bigskip
 	
 	Incertezas en las mediciones
-	
+	\medskip
 		Las mediciones realizadas están afectadas por incertezas debido al propio funcionamiento del instrumento y varían según el tipo de medición que se realiza.
 		\medskip
 		Los errores que pueden aparecer son:
@@ -249,9 +249,22 @@
 
 
 
+
+
+
 %% DESARROLLO - Primer medición
 \subsection{Primer medición}
 	
+	Banco de Medición:
+	
+	\begin{figure}[h]
+				\centering
+				\includegraphics[width=0.47\textwidth]{images/bancoMedicion.jpeg}
+				\medskip
+	\end{figure}
+	\bigskip\bigskip	
+
+	Para el desarrollo de esta medición se generó una onda cuadrada de amplitud 5V pico a pico, y se fue variando la frecuencia desde el generador de funciones y cambiando el modo y la base de tiempo de los contadores. Se obtuvo la siguiente tabla:
 
 \newpage
 % Tabla 2
@@ -289,19 +302,30 @@
 
 
 %% DESARROLLO - Segunda medición
-\subsection{Primer medición}
+\subsection{Segunda medición}
 
+	Banco de Medición:
+	
+	\begin{figure}[h]
+				\centering
+				\includegraphics[width=0.47\textwidth]{images/bancoMedicionMed2.jpeg}
+				\medskip
+	\end{figure}
+	\bigskip\bigskip
+	
+	Para el desarrollo de esta medición se generó una onda cuadrada de amplitud 5V pico a pico, 1 KHz de frecuencia y se fue variando el ciclo de trabajo desde el generador y probando todas las combinaciones posibles entre el slope A y B ( + y -). Se obtuvo la siguiente tabla:
+	
 
 %% DESARROLLO - Tercera medición
-\subsection{Primer medición}
+\subsection{Tercera medición}
 
 
 %% DESARROLLO - Cuarta medición
-\subsection{Primer medición}
+\subsection{Cuarta medición}
 
 
 %% DESARROLLO - Quinta medición
-\subsection{Primer medición}
+\subsection{Quinta medición}
 
 
 % CONCLUSIONES
